--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ecommerce-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Run yarn or npm i to download package Create new file .env Copy value of .env-example and paste .env Run yarn initDB or npm initDB init database Run yarn start or npm start to run server#\u0000 \u0000A\u0000P\u0000I\u0000_\u0000S\u0000H\u0000O\u0000P\u0000\r\u0000 \u0000",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -28,5 +28,6 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "yaml": "^2.3.4"
-  }
+  },
+  "devDependencies": {}
 }
